<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:layout_marginTop="@dimen/margin_medium">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_poster"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:src="@drawable/movie_poster"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_favorite_accent"
                android:text="7.5"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_alignTop="@id/iv_movie_poster"
                />
            <ImageView
                android:id="@+id/tv_scan"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_fullscreen_white"
                android:layout_alignBottom="@id/iv_movie_poster"
                android:layout_alignEnd="@id/iv_movie_poster"
                android:background="@color/black_grey"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/rl_poster"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/movie_title"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/tv_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_movie_title"
            android:layout_below="@id/tv_movie_title"
            android:text="@string/movie_genre"
            android:textSize="@dimen/text_regular"
            android:textStyle="bold"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_movie_genre"
            android:layout_below="@id/tv_movie_genre"
            android:text="@string/popularity"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/margin_medium"/>

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:numStars="10"
            android:rating="7"
            android:layout_alignLeft="@id/tv_popularity"
            android:layout_below="@id/tv_popularity"/>
            <TextView
                android:id="@+id/btn_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                android:background="@drawable/rounded_bg"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:paddingRight="@dimen/margin_medium_2"
                android:paddingLeft="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                android:layout_margin="@dimen/margin_medium"
                android:foreground="?android:attr/selectableItemBackground"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>
