<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#6b1a1a"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="350dp">
            <ImageView
                android:id="@+id/iv_back_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/movie_poster"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/head_over"/>
            <RelativeLayout
                android:id="@+id/rl_poster"
                android:layout_width="200dp"
                android:layout_height="270dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                >
                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="180dp"
                    android:layout_height="250dp"
                    android:src="@drawable/movie_poster"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:layout_alignParentBottom="true"/>
                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_favorite_accent"
                    android:text="7.5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_large_n"
                    android:layout_alignTop="@id/iv_movie_poster"
                    />
                <ImageView
                    android:id="@+id/tv_scan"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_fullscreen_white"
                    android:layout_alignBottom="@id/iv_movie_poster"
                    android:layout_alignEnd="@id/iv_movie_poster"
                    android:background="@color/head_over"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/rl_poster"
                android:text="@string/movie_description"
                android:textColor="@color/white"
                android:lines="6"
                android:ellipsize="end"
                android:paddingTop="@dimen/margin_medium_2"
                android:paddingLeft="@dimen/margin_medium"/>

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                android:numStars="10"
                android:rating="7"
                android:layout_below="@id/rl_poster"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium"/>
            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingbar"
                android:text="@string/released_january_2017"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin_medium"/>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_head"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_white" />
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/blade_runner_2043"
            style="@style/AppButtonBlack"
            android:gravity="center_vertical"
            android:background="#f0a050"
            android:layout_below="@id/rl_head"/>
        <LinearLayout
            android:id="@+id/ll_genre_group"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_medium_2"
            android:layout_below="@id/tv_movie_title">
            <include
                layout="@layout/item_movie_genre"/>
            <include
                layout="@layout/item_movie_genre"/>
            <include
                layout="@layout/item_movie_genre"/>
            <include
                layout="@layout/item_movie_genre"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_movie_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_hr_0_mins"
            android:textColor="@color/white"
            android:background="@drawable/bg_round_accent_border_solid_transparent"
            android:padding="@dimen/margin_medium"
            android:layout_below="@id/ll_genre_group"
            android:layout_marginStart="@dimen/margin_medium_2"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_view"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@id/tv_movie_time"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/margin_medium_2"
            android:paddingStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            />
        <TextView
            android:id="@+id/tv_movie_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            style="@style/Review"
            android:layout_below="@id/rv_view"
            android:paddingBottom="@dimen/margin_medium_2"/>
    </RelativeLayout>
</ScrollView>
